New Windows Games:
* Alan Wake - GoG only
* Alan Wake American Nightmare - GoG only
* Bastion - Vista/7 only
* Dear Esther - Steam only
* Dinner Date - Steam only
* Full throttle - ScummVM only
* Normality - GoG only
* Sam & Max Hit The Road - ScummVM only
* Superbrothers: Sword & Sorcery
* Wing Commander IV: The Price Of Freedom - GoG only
New DOS Games:
* Full Throttle
* Sam & Max Hit The Road
Updated Windows Games:
* Cryostasis - Added GoG info
* King's Quest 1-6 - Added ScummVM info
* Limbo - Added downloaded install info
* Return to Zork - Added ScummVM info
* Space Quest 1-5 - Added ScummVM info
=2012/5/21=
New Windows Games:
* 18 Wheels of Steel: Extreme Trucker - Contributed by AdmiringWorm
* 7554 - Contributed by AdmiringWorm
* Alan Wake - Steam only - Contributed by Arc Angel
* Angry Birds Space - Contributed by cheshhire
* APB Reloaded - Accounts, Settings, Statistics only - Contributed by AdmiringWorm
* B.A.D - Battle Armor Division - Contributed by Arc Angel
* Black Market - Contributed by Arc Angel
* Cities in Motion - Contributed by AdmiringWorm
* The Darkness II - Contributed by Arc Angel
* Deep Black Reloaded - Contributed by AdmiringWorm
* Depth Hunter - Contributed by Arc Angel
* Dungeon Siege III - Contributed by Arc Angel
* Kingdoms of Amalur: Reckoning - Steam only - Contributed by Arc Angel
* Legends of Grimrock - Contributed by Arc Angel
* Mass Effect 3 - Contributed by AdmiringWorm
* M.U.D. TV . Contributed by AdmiringWorm
* Payday: The Heist - Steam only - Contributed by Arc Angel
* Resident Evil 5 - Contributed by Arc Angel
* Sacred 2: Fallen Angel - Contributed by AdmiringWorm
* Terrorist Takedown 3 - Contributed by AdmiringWorm
* Thrillville Off The Rails - Contributed by AdmiringWorm
* Trackmania 2 Canyon - Contributed by AdmiringWorm
New Steam Games:
* AlternativA - Contributed by AdmiringWorm
* Saint's Row: The Third - Moved from windows.xml and Corrected to user steamuserdata
* Serious Sam 2 - Steam only - Contributed by Arc Angel