@@ -1,4 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <games xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="games.xsd" majorVersion="1" minorVersion="2" date="2012-01-14T08:40:15">
   <!--This file contains game data that was originally mislabeled, or for some other reason incorrect to the point that backup support had to be removed. The main purpose of these is to allow deprecated games to be able to still restore.-->
+  <game name="Blackwell3ConvergenceRemastered" platform="Windows" deprecated="true">
+    <title>Blackwell Episode 3: Blackwell Convergence (Remastered)</title>
+    <location_path environment_variable="steamcommon" path="blackwell convergence"/>
+    <save path="Saves"/>
+    <comment>Newer release rendered this incompatible</comment>
+    <contributor>Arc Angel</contributor>
+  </game>
+  <game name="Blackwell1LegacyRemastered" platform="Windows" deprecated="true">
+    <title>Blackwell Episode 1: The Blackwell Legacy (Remastered)</title>
+    <location_path environment_variable="steamcommon" path="blackwell legacy"/>
+    <save path="Saves"/>
+    <comment>Newer release rendered this incompatible</comment>
+    <contributor>Arc Angel</contributor>
+  </game>
+  <game name="Blackwell2UnboundRemastered" platform="Windows" deprecated="true">
+    <title>Blackwell Episode 2: Blackwell Unbound (Remastered)</title>
+    <location_path environment_variable="steamcommon" path="blackwell unbound"/>
+    <save path="Saves"/>
+    <comment>Newer release rendered this incompatible</comment>
+    <contributor>Arc Angel</contributor>
+  </game>
 </games>
