@@ -275,7 +275,7 @@
         </xs:choice>
         <xs:element ref="comment" minOccurs="0" maxOccurs="1"/>
         <xs:element ref="restore_comment" minOccurs="0" maxOccurs="1"/>
-        <xs:element ref="contributor" minOccurs="0" maxOccurs="unbounded"/>
+        <xs:element ref="contributor" minOccurs="1" maxOccurs="unbounded"/>
       </xs:sequence>
       <xs:attribute ref="name" use="required"/>
       <xs:attribute ref="platform" use="optional"/>
